--- a/META.yml
+++ b/META.yml
@@ -27,7 +27,7 @@ no_index:
 requires:
   DateTime::Incomplete: 0
   DateTimeX::Auto: 0
-  Type::Tiny: 0.001
+  Type::Library: 0.003_04
   XML::RegExp: 0
   perl: 5.8.3
 resources:
@@ -35,4 +35,4 @@ resources:
   homepage: https://metacpan.org/release/Types-XSD
   license: http://dev.perl.org/licenses/
   repository: https://bitbucket.org/tobyink/p5-types-xsd
-version: 0.000_01
+version: 0.000_02
