--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -6,7 +6,7 @@
 	readme_from       m`Types::XSD`;
 	requires          p`DateTime::Incomplete 0`;
 	requires          p`DateTimeX::Auto 0`;
-	requires          p`Type::Tiny 0.001`;
+	requires          p`Type::Library 0.003_04`;
 	requires          p`XML::RegExp 0`;
 	test_requires     p`Test::More 0.88`;
 	test_requires     p`Test::DescribeMe`;
