Import of TOBYINK/Types-XSD-0.001 from CPAN.
gitpan-cpan-distribution: Types-XSD
gitpan-cpan-version:      0.001
gitpan-cpan-path:         TOBYINK/Types-XSD-0.001.tar.gz
gitpan-cpan-author:       TOBYINK
gitpan-cpan-maturity:     released

--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -6,9 +6,9 @@
 	readme_from       m`Types::XSD`;
 	requires          p`DateTime::Incomplete 0`;
 	requires          p`DateTimeX::Auto 0`;
-	requires          p`Type::Library 0.003_04`;
+	requires          p`Type::Library 0.004`;
 	requires          p`XML::RegExp 0`;
 	test_requires     p`Test::More 0.88`;
-	test_requires     p`Test::TypeTiny 0.003_04`;
+	test_requires     p`Test::TypeTiny 0.004`;
 .
 
