--- a/META.yml
+++ b/META.yml
@@ -5,7 +5,7 @@ author:
 build_requires:
   ExtUtils::MakeMaker: 6.59
   Test::More: 0.88
-  Test::TypeTiny: 0.003_04
+  Test::TypeTiny: 0.004
 configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
@@ -26,7 +26,7 @@ no_index:
 requires:
   DateTime::Incomplete: 0
   DateTimeX::Auto: 0
-  Type::Library: 0.003_04
+  Type::Library: 0.004
   XML::RegExp: 0
   perl: 5.8.3
 resources:
@@ -34,4 +34,4 @@ resources:
   homepage: https://metacpan.org/release/Types-XSD
   license: http://dev.perl.org/licenses/
   repository: https://bitbucket.org/tobyink/p5-types-xsd
-version: 0.000_04
+version: 0.001
