Import of TOBYINK/Types-XSD-0.002 from CPAN.
gitpan-cpan-distribution: Types-XSD
gitpan-cpan-version:      0.002
gitpan-cpan-path:         TOBYINK/Types-XSD-0.002.tar.gz
gitpan-cpan-author:       TOBYINK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -25,7 +25,7 @@ no_index:
     - xt
 requires:
   DateTime::Incomplete: 0
-  DateTimeX::Auto: 0
+  DateTimeX::Auto: 0.004
   Type::Library: 0.004
   XML::RegExp: 0
   perl: 5.8.3
@@ -33,5 +33,5 @@ resources:
   bugtracker: http://rt.cpan.org/Dist/Display.html?Queue=Types-XSD
   homepage: https://metacpan.org/release/Types-XSD
   license: http://dev.perl.org/licenses/
-  repository: https://bitbucket.org/tobyink/p5-types-xsd
-version: 0.001
+  repository: https://github.com/tobyink/p5-types-xsd
+version: 0.002
